--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "nuxt": "^2.0.0",
     "prismic-javascript": "^2.1.1",
-    "prismic-nuxt": "git+https://github.com/gholgot/prismic-nuxt.git#nuxtjs_merge",
+    "@nuxtjs/prismic": "^1.0.0",
     "prismic-vue": "git+https://github.com/prismicio/prismic-vue.git"
   },
   "devDependencies": {
